--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 google-auth==2.6.0
 google-auth-oauthlib==0.4.4
-hdbscan==0.8.28
 matplotlib==3.5.2
 nltk==3.5
 numpy==1.22.4
 pandas==1.1.3
+plotly==5.8.0
+Pillow==9.1.1
 regex==2020.10.15
-sentence-transformers==2.2.0
+scikit_learn==1.1.1
+sentence_transformers==2.2.0
 streamlit==1.9.2
-streamlit-autorefresh==0.0.1
-umap-learn==0.5.2
-vaderSentiment==3.3.2
+streamlit_autorefresh==0.0.1
 tensorflow==2.8.0
-tensorflow-estimator==2.5.0
-tensorflow-io-gcs-filesystem==0.24.0
 transformers==4.10.2
 tweepy==3.10.0
+umap==0.1.1
+umap_learn==0.5.2
+vaderSentiment==3.3.2
